terraform/aws/vpc/network_acl_with_unrestricted_access_to_rdp.tf
# fails
# todo


resource "aws_network_acl" "fail_rdp" {
  vpc_id = aws_vpc.main.id

  egress = [
    {
      protocol   = "tcp"
      rule_no    = 200
      action     = "allow"
      cidr_block = "10.3.0.0/18"
      from_port  = 443
      to_port    = 443
    }
  ]

  ingress = [
    {
      protocol   = "tcp"
      rule_no    = 100
      action     = "allow"
      cidr_block = "0.0.0.0/0"
      from_port  = 3389
      to_port    = 3389
    }
  ]

  tags = {
    Name = "main"
    test = "fail"
  }
}
